syntax = "proto3";
package com.tophap.mapbox_gl.proto;
option java_package = "com.tophap.mapbox_gl.proto";
option java_outer_classname = "MapboxUtil";

import "google/protobuf/wrappers.proto";

message FormattedSection {
  string text = 1;
  google.protobuf.DoubleValue font_scale = 2;
  repeated string font_stack = 3;
  Color text_color = 4;
}

message TransitionOptions {
  int64 duration = 1;
  int64 delay = 2;
  bool enable_placement_transitions = 3;
}

enum Gravity {
  GRAVITY_TOP = 0;
  GRAVITY_BOTTOM = 1;
  GRAVITY_LEFT = 2;
  GRAVITY_RIGHT = 3;
  GRAVITY_CENTER_VERTICAL = 4;
  GRAVITY_FILL_VERTICAL = 5;
  GRAVITY_CENTER_HORIZONTAL = 6;
  GRAVITY_FILL_HORIZONTAL = 7;
  GRAVITY_CENTER = 8;
  GRAVITY_FILL = 9;
  GRAVITY_CLIP_VERTICAL = 10;
  GRAVITY_CLIP_HORIZONTAL = 11;
  GRAVITY_START = 12;
  GRAVITY_END = 13;
}

enum TranslateAnchor {
  MAP = 0;
  VIEWPORT = 1;
}

enum PositionAnchor {
  POSITION_CENTER = 0;
  POSITION_LEFT = 1;
  POSITION_RIGHT = 2;
  POSITION_TOP = 3;
  POSITION_BOTTOM = 4;
  POSITION_TOP_LEFT = 5;
  POSITION_TOP_RIGHT = 6;
  POSITION_BOTTOM_LEFT = 7;
  POSITION_BOTTOM_RIGHT = 8;
}

message LatLng {
  double latitude = 1;
  double longitude = 2;
  double altitude = 3;
}

message LatLngQuad {
  LatLng topLeft = 1;
  LatLng topRight = 2;
  LatLng bottomRight = 3;
  LatLng bottomLeft = 4;
}

message LatLngBounds {
  double latitudeNorth = 1;
  double latitudeSouth = 2;
  double longitudeEast = 3;
  double longitudeWest = 4;
}

message Color {
  int32 red = 1;
  int32 green = 2;
  int32 blue = 3;
  int32 alpha = 4;
  float opacity = 5;
  bool has_color = 6;
}